- Updated deconvolution layer to match PyTorch's API
- Updated identity layer to copy tensors to enable tensor parallelism in subsequent layers in the compute graph
- Added IdentityZero layer that allows alternating generator/discriminator
  updates for training GANs.
- Added an External layer that enables separately-compiled library to be loaded dynamically

Python front-end:
 - Added support for buidling and launching jobs on Fugaku
 - Added Riken as a known compute center
 - Added support for PJM as job launcher
 - Unified convolution/deconvolution interface to better approximate PyTorch.
 - Added circular (periodic) padding transformation for 2D and 3D tensors

Performance optimizations:
 - Enabled the input layers to use a view of the I/O buffers in the
   buffered data coordinator
 - Use default-allocated GPU memory for long-lived buffers
 - Optimized GPU kernels for entry-wise operators

Model portability & usability:
 - Weight initialization from NumPy files
 - Expanded layer documentation

Experiments & Applications:
 - Example for training Transformer model with D&SP and D&SP-cSub
 - PROBIESNet model for HRRL data
 - Cosmo 3D GAN
 - MNIST GAN
 - Image GAN

Internal features:
 - Added operator class
 - Added AlternateUpdates callback to be used with IdentityZero layers for
   training GANs.
 - Added support for serializing network architectures to protobuf format.

I/O & data readers:
 - Updated SMILES data reader to use sample lists
 - Added explicitly managed buffered reading and local unpacking for the
   SMILES data reader to minimize file access
 - Sample lists with integral indices can use range format (start ... end)
 - Added a new extensible HDF5 data reader that uses a data set schema
   and experiment schema files to define how the data is represented.
   This allows the user to change the representation of data without
   changing the data reader.
 - Changed the input layer to take a data field and only produce a